--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <head>
 <meta http-equiv="refresh" content"2;E-Portfolio.html">
 </head>
+<body>
+  <a href="E-Portfolio.html">
+            Portfolio
+  </a>
+</body>
