--- a/index.html
+++ b/index.html
@@ -2,7 +2,5 @@
 <meta http-equiv="refresh" content"2;E-Portfolio.html">
 </head>
 <body>
-  <a href="E-Portfolio.html">
-            Portfolio
-  </a>
+  <a href="E-Portfolio.html">Portfolio</a>
 </body>
