--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
 <head>
-
+<meta http-equiv="refresh" content"2;E-Portfolio.html">
 </head>
-<body>
-  <a href="E-Portfolio.html">Portfolio</a>
-  <form action="E-Portfolio.html">
-    <input type="submit" value="Portfolio" />
-</form>
-</body>
