--- a/E-Portfolio.html
+++ b/E-Portfolio.html
@@ -288,7 +288,7 @@
     <div class="project-card bg-white rounded-xl overflow-hidden shadow-md transition-all duration-300">
       <div class="h-48 overflow-hidden">
         <img src="Odayssey.png" 
-             alt="Travel App" 
+             alt="Odayssey" 
              class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
       </div>
       <div class="p-6">
@@ -334,9 +334,81 @@
           </div>
         </div>
       </div>
+      </div>
     </div>
   </div>
   
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <!-- Project 4 -->
+    <div class="project-card bg-white rounded-xl overflow-hidden shadow-md transition-all duration-300">
+      <div class="h-48 overflow-hidden">
+        <img src="webservices.png" 
+             alt="WebServices" 
+             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+      </div>
+      <div class="p-6">
+        <div class="flex justify-between items-start mb-3">
+          <h3 class="text-xl font-bold">Web Services</h3>
+          <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full">Web</span>
+        </div>
+        <p class="text-gray-600 mb-4">This is a collection of programs I made for a class to show my skills with web services</p>
+        <div class="flex justify-between items-center">
+          <a href="webservices.html" class="text-blue-500 hover:text-blue-700 font-medium flex items-center">
+            View Project <i class="fas fa-arrow-right ml-2"></i>
+          </a>
+          <div class="flex space-x-2">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Project 5 -->
+    <div class="project-card bg-white rounded-xl overflow-hidden shadow-md transition-all duration-300">
+      <div class="h-48 overflow-hidden">
+        <img src="Dynamic.png" 
+             alt="dynamic webpages" 
+             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+      </div>
+      <div class="p-6">
+        <div class="flex justify-between items-start mb-3">
+          <h3 class="text-xl font-bold">Demos</h3>
+          <span class="bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full">DEMO</span>
+        </div>
+        <p class="text-gray-600 mb-4">This is a demo from my class I took on creating dynamic webpages</p>
+        <div class="flex justify-between items-center">
+          <a href="Demos.html" class="text-blue-500 hover:text-blue-700 font-medium flex items-center">
+            View Project <i class="fas fa-arrow-right ml-2"></i>
+          </a>
+          <div class="flex space-x-2">
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Project 6 -->
+    <div class="project-card bg-white rounded-xl overflow-hidden shadow-md transition-all duration-300">
+      <div class="h-48 overflow-hidden">
+        <img src="Java.png" 
+             alt="Java" 
+             class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+      </div>
+      <div class="p-6">
+        <div class="flex justify-between items-start mb-3">
+          <h3 class="text-xl font-bold">Login Counter</h3>
+          <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Java</span>
+        </div>
+        <p class="text-gray-600 mb-4">A Java application that tracks the amount of times users log in.</p>
+        <div class="flex justify-between items-center">
+          <a href="LoginCounter.html" class="text-blue-500 hover:text-blue-700 font-medium flex items-center">
+            View Project <i class="fas fa-arrow-right ml-2"></i>
+          </a>
+          <div class="flex space-x-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- Contact Section -->
