--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <head>
-<meta http-equiv="refresh" content"2;E-Portfolio.html">
-</head>
+ 
+ </head>
+ <body>
+   <a href="E-Portfolio.html">Portfolio</a>
+   <form action="E-Portfolio.html">
+     <input type="submit" value="Portfolio" />
+ </form>
+ </body>
